--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "dependencies": {
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "mysql": "^2.18.1",
+    "typeorm": "^0.3.11",
     "ws": "^8.9.0"
   },
   "name": "server",
@@ -13,7 +15,9 @@
     "predev": "tsc",
     "build": "nodemon --watch src/**/*.ts --exec ts-node src/app.ts",
     "dev": "nodemon --watch src --delay 1 --exec ts-node src/app.ts",
-    "start": "nodemon --watch src --delay 1 --exec ts-node src/app.ts"
+    "start": "nodemon --watch src --delay 1 --exec ts-node src/app.ts",
+    "schema:drop": "ts-node ./node_modules/typeorm/cli.js schema:drop -d src/ormconfig.ts",
+    "schema:sync": "ts-node ./node_modules/typeorm/cli.js schema:sync -d src/ormconfig.ts"
   },
   "author": "",
   "license": "ISC",
